fix: height on ios

--- a/src/components/TabBar/TabBar.scss
+++ b/src/components/TabBar/TabBar.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 7px 0 17px;
+    padding: 8px 0 24px;
     border-top: 1px solid rgba(60, 60, 67, 0.1);
 }
 
