--- a/src/index.scss
+++ b/src/index.scss
@@ -28,14 +28,19 @@ h1, h2, h3, h4, h5, h6, p, span, a {
   box-sizing: border-box;
 }
 
+body, #root{
+  height: var(--tg-viewport-height, 100vh);
+}
+
 body {
   background: var(--telegram-hint-color, white);
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 main {
-  max-height: calc(var(--tg-viewport-height, 100vh) - 50px);
+  max-height: calc(var(--tg-viewport-height, 100vh) - 72px);
   overflow-y: auto;
 }
 
